--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,6 @@ archives_base_name=microDurability
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.18.0+build.387-1.16.1
+autoconfig1u_version=3.2.2
+clothconfig_version=4.6.0
+modmenu_version=1.14.5+build.30
