Update to 1.17, fix new rendering bugs

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.3
-yarn_mappings=1.16.3+build.11
-loader_version=0.9.3+build.207
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.37
+loader_version=0.11.6
 # Mod Properties
 mod_version=0.3.1
 maven_group=dzwdz
 archives_base_name=microDurability
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.21.0+build.407-1.16
-autoconfig1u_version=3.2.2
-clothconfig_version=4.8.1
-modmenu_version=1.14.6+build.31
+fabric_version=0.37.2+1.17
+autoconfig1u_version=3.3.1
+clothconfig_version=5.0.38
+modmenu_version = 2.0.0-beta.7
