--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.8
+
 # Mod Properties
 mod_version=0.3.1
 maven_group=dzwdz
 archives_base_name=microDurability
+
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.43.1+1.18
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.22
+loader_version=0.12.12
+fabric_version=0.46.2+1.18
 autoconfig1u_version=3.3.1
-clothconfig_version=5.0.38
-modmenu_version = 2.0.0-beta.7
+clothconfig_version=6.1.48
+modmenu_version = 3.0.1
