--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,39 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 
 # Mod Properties
-mod_version=0.3.2
-maven_group=dzwdz
-archives_base_name=microDurability
+mod_version = 0.3.2
+maven_group = com.github.reviversmc
+archives_base_name = microdurability
 
-# Dependencies
-minecraft_version=1.18.1
-yarn_mappings=1.18.1+build.22
-loader_version=0.12.12
-fabric_version=0.46.2+1.18
-autoconfig1u_version=3.3.1
-clothconfig_version=6.1.48
-modmenu_version = 3.0.1
+# Global Dependencies
+fabric_loader_version = 0.14.5
+spotbugs_version = 4.7.0
+
+# Module Dependencies
+# 1.18
+minecraft_version_1_18 = 1.18.2
+yarn_mappings_1_18 = 1.18.2+build.3
+fabric_version_1_18 = 0.51.1+1.18.2
+modmenu_version_1_18 = 3.0.1
+cloth_config_version_1_18 = 6.1.48
+# 1.19
+minecraft_version_1_19 = 22w19a
+yarn_mappings_1_19 = 22w19a+build.1
+fabric_version_1_19 = 0.52.2+1.19
+modmenu_version_1_19 = 4.0.0-beta.4
+cloth_config_version_1_19 = 7.0.61
+
+# If true, third-party mods will be loaded during runtime in the developer run configurations
+use_third_party_mods = true
+# 1.18
+lazydfu_version_1_18 = 0.1.2
+sodium_version_1_18 = mc1.18.2-0.4.1
+lithium_version_1_18 = mc1.18.2-0.7.9
+starlight_version_1_18 = 1.0.2+1.18.2
+smoothboot_version_1_18 = 3692365
+no_fade_version_1_18 = 3550935
+# 1.19
+lazydfu_version_1_19 = 0.1.2
+smoothboot_version_1_19 = 3692365
+no_fade_version_1_19 = 3550935
