--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,9 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
+
+rootProject.name = 'microdurability'
+
+include 'microdurability-core'
+include 'microdurability-1.18'
+include 'microdurability-1.19'
