--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,7 +34,7 @@ jobs:
       # - name: Upload GitHub release
       #   uses: AButler/upload-release-assets@v2.0
       #   with:
-      #     files: "**/build/libs/*.jar;!**/build/libs/*-sources.jar;!**/build/libs/*-dev.jar;!bettersleeping-core/"
+      #     files: "**/build/libs/*.jar;!**/build/libs/*-sources.jar;!**/build/libs/*-dev.jar;!microdurability-core/"
       #     repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish 1.18 version
