--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,8 +43,8 @@ jobs:
           modrinth-id: JW3bGnLO
           modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
 
-          curseforge-id: 409222
-          curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
+          # curseforge-id: 409222
+          # curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
 
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -68,8 +68,8 @@ jobs:
           modrinth-id: JW3bGnLO
           modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
 
-          curseforge-id: 409222
-          curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
+          # curseforge-id: 409222
+          # curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
 
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
