Add compatibility with Raised mod

--- a/gradle.properties
+++ b/gradle.properties
@@ -33,6 +33,7 @@ lithium_version_1_18 = mc1.18.2-0.7.9
 starlight_version_1_18 = 1.0.2+1.18.2
 smoothboot_version_1_18 = 3692365
 no_fade_version_1_18 = 3550935
+raised_version_1_18 = Fabric-1.18.2-1.1.1
 # 1.19
 lazydfu_version_1_19 = 0.1.2
 smoothboot_version_1_19 = 3692365
