Target Minecraft 1.19-rc2

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ maven_group = com.github.reviversmc
 archives_base_name = microdurability
 
 # Global Dependencies
-fabric_loader_version = 0.14.5
+fabric_loader_version = 0.14.6
 spotbugs_version = 4.7.0
 
 # Module Dependencies
@@ -18,11 +18,11 @@ fabric_version_1_18 = 0.51.1+1.18.2
 modmenu_version_1_18 = 3.0.1
 cloth_config_version_1_18 = 6.1.48
 # 1.19
-minecraft_version_1_19 = 22w19a
-yarn_mappings_1_19 = 22w19a+build.1
-fabric_version_1_19 = 0.52.2+1.19
+minecraft_version_1_19 = 1.19-rc2
+yarn_mappings_1_19 = 1.19-rc2+build.1
+fabric_version_1_19 = 0.55.1+1.19
 modmenu_version_1_19 = 4.0.0-beta.4
-cloth_config_version_1_19 = 7.0.61
+cloth_config_version_1_19 = 7.0.65
 
 # If true, third-party mods will be loaded during runtime in the developer run configurations
 use_third_party_mods = true
