--- a/microdurability-1.19/build.gradle
+++ b/microdurability-1.19/build.gradle
@@ -50,7 +50,7 @@ dependencies {
         // modRuntimeOnly "maven.modrinth:sodium:${project.sodium_version_1_19}"
         // modRuntimeOnly "maven.modrinth:lithium:${project.lithium_version_1_19}"
         // modRuntimeOnly "maven.modrinth:starlight:${project.starlight_version_1_19}"
-        modRuntimeOnly "curse.maven:smooth-boot-415758:${project.smoothboot_version_1_19}"
+        // modRuntimeOnly "curse.maven:smooth-boot-415758:${project.smoothboot_version_1_19}"
         modRuntimeOnly "curse.maven:no-fade-452768:${project.no_fade_version_1_19}"
 
         // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
