--- a/gradle.properties
+++ b/gradle.properties
@@ -18,9 +18,9 @@ fabric_version_1_18 = 0.51.1+1.18.2
 modmenu_version_1_18 = 3.0.1
 cloth_config_version_1_18 = 6.1.48
 # 1.19
-minecraft_version_1_19 = 1.19-rc2
-yarn_mappings_1_19 = 1.19-rc2+build.1
-fabric_version_1_19 = 0.55.1+1.19
+minecraft_version_1_19 = 1.19
+yarn_mappings_1_19 = 1.19+build.1
+fabric_version_1_19 = 0.55.2+1.19
 modmenu_version_1_19 = 4.0.0-beta.4
 cloth_config_version_1_19 = 7.0.65
 
