Mark 1.19 version as full release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -82,7 +82,7 @@ jobs:
 
           name: microDurability 0.3.4 for 1.19
           version: 0.3.4+1.19
-          version-type: beta
+          version-type: release
 
           loaders: |
             fabric
