--- a/gradle.properties
+++ b/gradle.properties
@@ -11,12 +11,12 @@ fabric_loader_version = 0.14.6
 spotbugs_version = 4.7.0
 
 # Module Dependencies
-# 1.18
-minecraft_version_1_18 = 1.18.2
-yarn_mappings_1_18 = 1.18.2+build.3
-fabric_version_1_18 = 0.51.1+1.18.2
-modmenu_version_1_18 = 3.0.1
-cloth_config_version_1_18 = 6.1.48
+# 1.17
+minecraft_version_1_17 = 1.17.1
+yarn_mappings_1_17 = 1.17.1+build.65
+fabric_version_1_17 = 0.46.1+1.17
+modmenu_version_1_17 = 2.0.14
+cloth_config_version_1_17 = 5.3.63
 # 1.19
 minecraft_version_1_19 = 1.19
 yarn_mappings_1_19 = 1.19+build.1
@@ -26,14 +26,15 @@ cloth_config_version_1_19 = 7.0.65
 
 # If true, third-party mods will be loaded during runtime in the developer run configurations
 use_third_party_mods = true
-# 1.18
-lazydfu_version_1_18 = 0.1.2
-sodium_version_1_18 = mc1.18.2-0.4.1
-lithium_version_1_18 = mc1.18.2-0.7.9
-starlight_version_1_18 = 1.0.2+1.18.2
-smoothboot_version_1_18 = 3692365
-no_fade_version_1_18 = 3550935
-raised_version_1_18 = Fabric-1.18.2-1.1.1
+# 1.17
+lazydfu_version_1_17 = 0.1.2
+sodium_version_1_17 = mc1.17.1-0.3.4
+joml_version_sodium_1_17 = 1.10.2
+lithium_version_1_17 = mc1.17.1-0.7.5
+starlight_version_1_17 = Starlight 1.0.0 1.17.x
+smoothboot_version_1_17 = 1.16.5-1.6.0
+no_fade_version_1_17 = 3355800
+raised_version_1_17 = Fabric-1.17.1-1.1.2
 # 1.19
 lazydfu_version_1_19 = 0.1.2
 smoothboot_version_1_19 = 3692365
