--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,10 +23,10 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
 
       - name: Build 1.17 project
-        run: ./gradlew :microdurability-1.17:build --no-daemon --stacktrace
+        run: ./gradlew :microdurability-1.17:build --stacktrace
 
       - name: Build 1.19 project
-        run: ./gradlew :microdurability-1.19:build --no-daemon --stacktrace
+        run: ./gradlew :microdurability-1.19:build --stacktrace
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
