--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,16 +26,10 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
 
       - name: Build 1.17 project
-        run: ./gradlew :microdurability-1.17:build --no-daemon --stacktrace
+        run: ./gradlew :microdurability-1.17:build --stacktrace
 
       - name: Build 1.19 project
-        run: ./gradlew :microdurability-1.19:build --no-daemon --stacktrace
-
-      # - name: Upload GitHub release
-      #   uses: AButler/upload-release-assets@v2.0
-      #   with:
-      #     files: "**/build/libs/*.jar;!**/build/libs/*-sources.jar;!**/build/libs/*-dev.jar;!microdurability-core/"
-      #     repo-token: ${{ secrets.GITHUB_TOKEN }}
+        run: ./gradlew :microdurability-1.19:build --stacktrace
 
       - name: Publish 1.17 version
         uses: Kir-Antipov/mc-publish@v3.2
@@ -49,8 +43,9 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
           files-primary: microdurability-1.17/build/libs/!(*-@(dev|sources)).jar
+          files-secondary: null
 
-          name: microDurability 0.3.6 for 1.17 and 1.18
+          name: 0.3.6 for 1.17 and 1.18
           version: 0.3.6+1.17
           version-type: release
 
@@ -81,8 +76,9 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
           files-primary: microdurability-1.19/build/libs/!(*-@(dev|sources)).jar
+          files-secondary: null
 
-          name: microDurability 0.3.6 for 1.19
+          name: 0.3.6 for 1.19
           version: 0.3.6+1.19
           version-type: release
 
@@ -91,6 +87,9 @@ jobs:
 
           game-versions: |
             1.19
+            1.19.1
+            1.19.2
+            1.19.3
 
           dependencies: |
             fabric-api    | depends
