--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,12 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
+# Gradle Properties
+org.gradle.jvmargs = -Xmx3G
+org.gradle.parallel = true
+org.gradle.workers.max = 3
+
+# Gradle Plugins
+fabric_loom_version = 1.1-SNAPSHOT
+loom_quiltflower_version = 1.8.0
+checkstyle_version = 10.5.0
 
 # Mod Properties
 mod_version = 0.3.6
@@ -7,35 +14,42 @@ maven_group = com.github.reviversmc
 archives_base_name = microdurability
 
 # Global Dependencies
-fabric_loader_version = 0.14.6
-spotbugs_version = 4.7.0
+fabric_loader_version = 0.14.17
 
 # Module Dependencies
 # 1.17
 minecraft_version_1_17 = 1.17.1
 yarn_mappings_1_17 = 1.17.1+build.65
-fabric_version_1_17 = 0.46.1+1.17
-modmenu_version_1_17 = 2.0.14
+fabric_api_version_1_17 = 0.46.1+1.17
+modmenu_version_1_17 = 2.0.17
 cloth_config_version_1_17 = 5.3.63
 # 1.19
-minecraft_version_1_19 = 1.19
-yarn_mappings_1_19 = 1.19+build.1
-fabric_version_1_19 = 0.55.2+1.19
-modmenu_version_1_19 = 4.0.0-beta.4
-cloth_config_version_1_19 = 7.0.65
+minecraft_version_1_19 = 1.19.2
+yarn_mappings_1_19 = 1.19.2+build.28
+fabric_api_version_1_19 = 0.70.0+1.19.2
+modmenu_version_1_19 = 4.1.2
+cloth_config_version_1_19 = 8.2.88
+
 
 # If true, third-party mods will be loaded during runtime in the developer run configurations
 use_third_party_mods = true
 # 1.17
 lazydfu_version_1_17 = 0.1.2
 sodium_version_1_17 = mc1.17.1-0.3.4
-joml_version_sodium_1_17 = 1.10.2
+sodium_joml_version_1_17 = 1.10.2
 lithium_version_1_17 = mc1.17.1-0.7.5
 starlight_version_1_17 = Starlight 1.0.0 1.17.x
+ferritecore_version_1_17 = 3.0.3
 smoothboot_version_1_17 = 1.16.5-1.6.0
 no_fade_version_1_17 = 3355800
-raised_version_1_17 = Fabric-1.17.1-1.1.2
+raised_version_1_17 = Fabric-1.17.1-1.21
 # 1.19
-lazydfu_version_1_19 = 0.1.2
-smoothboot_version_1_19 = 3692365
+lazydfu_version_1_19 = 0.1.3
+sodium_version_1_19 = mc1.19.2-0.4.4
+sodium_joml_version_1_19 = 1.10.4
+lithium_version_1_19 = mc1.19.2-0.10.4
+starlight_version_1_19 = 1.1.1+1.19
+ferritecore_version_1_19 = 5.0.3-fabric
+smoothboot_version_1_19 = 1.19-1.7.1
 no_fade_version_1_19 = 3550935
+raised_version_1_19 = Fabric-1.19.2-1.2.1
