--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ maven_group = com.github.reviversmc
 archives_base_name = microdurability
 
 # Global Dependencies
-fabric_loader_version = 0.14.6
+fabric_loader_version = 0.14.18
 spotbugs_version = 4.7.0
 
 # Module Dependencies
@@ -18,11 +18,11 @@ fabric_version_1_17 = 0.46.1+1.17
 modmenu_version_1_17 = 2.0.14
 cloth_config_version_1_17 = 5.3.63
 # 1.19
-minecraft_version_1_19 = 1.19
-yarn_mappings_1_19 = 1.19+build.1
-fabric_version_1_19 = 0.55.2+1.19
-modmenu_version_1_19 = 4.0.0-beta.4
-cloth_config_version_1_19 = 7.0.65
+minecraft_version_1_19 = 1.19.4
+yarn_mappings_1_19 = 1.19.4+build.1
+fabric_version_1_19 = 0.76.0+1.19.4
+modmenu_version_1_19 = 6.1.0-rc.4
+cloth_config_version_1_19 = 10.0.96
 
 # If true, third-party mods will be loaded during runtime in the developer run configurations
 use_third_party_mods = true
@@ -36,6 +36,6 @@ smoothboot_version_1_17 = 1.16.5-1.6.0
 no_fade_version_1_17 = 3355800
 raised_version_1_17 = Fabric-1.17.1-1.1.2
 # 1.19
-lazydfu_version_1_19 = 0.1.2
-smoothboot_version_1_19 = 3692365
+lazydfu_version_1_19 = 0.1.3
+smoothboot_version_1_19 = 1.19.4-1.7.0
 no_fade_version_1_19 = 3550935
