--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,19 +22,14 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
 
-      - name: Build 1.17 project
-        run: ./gradlew :microdurability-1.17:build --no-daemon --stacktrace
-
-      - name: Build 1.19 project
-        run: ./gradlew :microdurability-1.19:build --no-daemon --stacktrace
+      - name: Build the mod
+        run: ./gradlew :build --no-daemon --stacktrace
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
         with:
           name: build-artifacts
-          path: |
-            **/build/libs
-            !microdurability-core/
+          path: build/libs
       - name: Cleanup Gradle Cache
         run: |
           rm -f ~/.gradle/caches/modules-2/modules-2.lock
