--- a/gradle.properties
+++ b/gradle.properties
@@ -1,41 +1,31 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
+# Gradle Properties
+org.gradle.jvmargs = -Xmx2G
+org.gradle.parallel = true
+org.gradle.workers.max = 3
+
+# Gradle Plugins
+fabric_loom_version = 1.3-SNAPSHOT
+loom_vineflower_version = 1.11.0
+checkstyle_version = 10.12.+
 
 # Mod Properties
 mod_version = 0.3.6
 maven_group = com.github.reviversmc
 archives_base_name = microdurability
 
-# Global Dependencies
-fabric_loader_version = 0.14.18
-spotbugs_version = 4.7.0
+# Mod Dependencies
+minecraft_version = 1.19.4
+fabric_loader_version = 0.14.22
+fabric_api_version = 0.87.0+1.19.4
+yarn_mappings = 1.19.4+build.2
+modmenu_version = 6.3.1
+cloth_config_version = 10.1.105
 
-# Module Dependencies
-# 1.17
-minecraft_version_1_17 = 1.17.1
-yarn_mappings_1_17 = 1.17.1+build.65
-fabric_version_1_17 = 0.46.1+1.17
-modmenu_version_1_17 = 2.0.14
-cloth_config_version_1_17 = 5.3.63
-# 1.19
-minecraft_version_1_19 = 1.19.4
-yarn_mappings_1_19 = 1.19.4+build.1
-fabric_version_1_19 = 0.76.0+1.19.4
-modmenu_version_1_19 = 6.1.0-rc.4
-cloth_config_version_1_19 = 10.0.96
-
-# If true, third-party mods will be loaded during runtime in the developer run configurations
+# Dev-Env Mods
 use_third_party_mods = true
-# 1.17
-lazydfu_version_1_17 = 0.1.2
-sodium_version_1_17 = mc1.17.1-0.3.4
-joml_version_sodium_1_17 = 1.10.2
-lithium_version_1_17 = mc1.17.1-0.7.5
-starlight_version_1_17 = Starlight 1.0.0 1.17.x
-smoothboot_version_1_17 = 1.16.5-1.6.0
-no_fade_version_1_17 = 3355800
-raised_version_1_17 = Fabric-1.17.1-1.1.2
-# 1.19
-lazydfu_version_1_19 = 0.1.3
-smoothboot_version_1_19 = 1.19.4-1.7.0
-no_fade_version_1_19 = 3550935
+sodium_version = mc1.19.4-0.4.10
+lithium_version = mc1.19.4-0.11.1
+starlight_version = 1.1.1+1.19
+ferritecore_version = 5.2.0-fabric
+smoothboot_version = 4441240
+no_fade_version = 3550935
