--- a/settings.gradle
+++ b/settings.gradle
@@ -4,17 +4,13 @@ pluginManagement {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
-        // Quiltflower
-        maven {
-            name = 'Cotton'
-            url = 'https://server.bbkr.space/artifactory/libs-release/'
-        }
         gradlePluginPortal()
+		mavenCentral()
     }
+	plugins {
+		id 'fabric-loom' version "${fabric_loom_version}"
+		id 'io.github.juuxel.loom-vineflower' version "${loom_vineflower_version}"
+	}
 }
 
 rootProject.name = 'microdurability'
-
-include 'microdurability-core'
-include 'microdurability-1.17'
-include 'microdurability-1.19'
