Fix mc-publish file uploading

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,8 +39,7 @@ jobs:
 
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-          files-primary: build/libs/!(*-@(dev|sources)).jar
-          files-secondary: null
+          files: build/libs/!(*-@(dev|sources)).jar
 
           name: 0.3.7 for MC 1.19.4
           version: 0.3.7+1.19.4
