--- a/gradle.properties
+++ b/gradle.properties
@@ -14,18 +14,16 @@ maven_group = com.github.reviversmc
 archives_base_name = microdurability
 
 # Mod Dependencies
-minecraft_version = 1.19.4
+minecraft_version = 1.20.1
 fabric_loader_version = 0.14.22
-fabric_api_version = 0.87.0+1.19.4
-yarn_mappings = 1.19.4+build.2
-modmenu_version = 6.3.1
-cloth_config_version = 10.1.105
+fabric_api_version = 0.87.0+1.20.1
+yarn_mappings = 1.20.1+build.10
+modmenu_version = 7.2.1
+cloth_config_version = 11.1.106
 
 # Dev-Env Mods
 use_third_party_mods = true
-sodium_version = mc1.19.4-0.4.10
-lithium_version = mc1.19.4-0.11.1
-starlight_version = 1.1.1+1.19
-ferritecore_version = 5.2.0-fabric
-smoothboot_version = 4441240
-no_fade_version = 3550935
+sodium_version = mc1.20.1-0.5.2
+lithium_version = mc1.20.1-0.11.2
+ferritecore_version = 6.0.0-fabric
+threadtweak_version = 0.1.0+mc1.20.1
