--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,12 @@ yarn_mappings_1_17 = 1.17.1+build.65
 fabric_api_version_1_17 = 0.46.1+1.17
 modmenu_version_1_17 = 2.0.17
 cloth_config_version_1_17 = 5.3.63
+# 1.19
+minecraft_version_1_19 = 1.19.2
+yarn_mappings_1_19 = 1.19.2+build.28
+fabric_api_version_1_19 = 0.76.1+1.19.2
+modmenu_version_1_19 = 4.2.0-beta.2
+cloth_config_version_1_19 = 8.3.115
 # 1.19.4
 minecraft_version_1_19_4 = 1.19.4
 yarn_mappings_1_19_4 = 1.19.4+build.2
@@ -42,6 +48,15 @@ ferritecore_version_1_17 = 3.0.3
 smoothboot_version_1_17 = 1.16.5-1.6.0
 no_fade_version_1_17 = 3355800
 raised_version_1_17 = Fabric-1.17.1-1.1.2
+# 1.19
+lazydfu_version_1_19 = 0.1.3
+sodium_version_1_19 = mc1.19.2-0.4.4
+sodium_joml_version_1_19 = 1.10.4
+lithium_version_1_19 = mc1.19.2-0.11.1
+starlight_version_1_19 = 1.1.1+1.19
+ferritecore_version_1_19 = 5.0.3-fabric
+smoothboot_version_1_19 = 3821513
+no_fade_version_1_19 = 3550935
 # 1.19.4
 sodium_version_1_19_4 = mc1.19.4-0.4.10
 lithium_version_1_19_4 = mc1.19.4-0.11.1
