--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ rootProject.name = 'microdurability'
 include 'microdurability-core'
 include 'microdurability-1.17'
 include 'microdurability-1.19'
+include 'microdurability-1.19.4'
