--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,6 +28,9 @@ jobs:
       - name: Build 1.19 project
         run: ./gradlew :microdurability-1.19:build --stacktrace
 
+      - name: Build 1.19.4 project
+        run: ./gradlew :microdurability-1.19.4:build --stacktrace
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
