--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -56,6 +56,30 @@ jobs:
             cloth-config  | depends
             modmenu       | recommends
 
+      - name: Publish 1.19 version
+        uses: Kir-Antipov/mc-publish@v3.3
+        with:
+          modrinth-id: JW3bGnLO
+          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+          curseforge-id: 409222
+          curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          files: microdurability-1.19/build/libs/!(*-@(dev|sources)).jar
+          name: 0.3.6 for MC 1.19 to 1.19.3
+          version: 0.3.6+1.19
+          version-type: release
+          loaders: |
+            fabric
+          game-versions: |
+            1.19
+            1.19.1
+            1.19.2
+            1.19.3
+          dependencies: |
+            fabric-api    | depends
+            cloth-config  | depends
+            modmenu       | recommends
+
       - name: Publish 1.19.4 version
         uses: Kir-Antipov/mc-publish@v3.3
         with:
@@ -66,7 +90,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           files: microdurability-1.19.4/build/libs/!(*-@(dev|sources)).jar
           name: 0.3.6 for MC 1.19.4 to 1.20.4
-          version: 0.3.6+1.19
+          version: 0.3.6+1.19.4
           version-type: release
           loaders: |
             fabric
