--- a/microdurability-core/build.gradle
+++ b/microdurability-core/build.gradle
@@ -6,12 +6,8 @@ dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version_1_17}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings_1_17}:v2"
 
-	// Required Fabric API modules
-	modImplementation(fabricApi.module("fabric-api-base", project.fabric_api_version_1_17))
-	modImplementation(fabricApi.module("fabric-rendering-v1", project.fabric_api_version_1_17))
-
 	// Other mods
-	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version_1_17}"
+	modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version_1_17}"
 	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version_1_17}") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
