--- a/gradle.properties
+++ b/gradle.properties
@@ -4,25 +4,23 @@ org.gradle.parallel = true
 org.gradle.workers.max = 3
 
 # Gradle Plugins
-fabric_loom_version = 1.3-SNAPSHOT
-loom_vineflower_version = 1.11.0
-checkstyle_version = 10.12.+
+fabric_loom_version = 1.6-SNAPSHOT
 
 # Mod Properties
-mod_version = 0.3.7
+mod_version = 0.3.8
 maven_group = com.github.reviversmc
 archives_base_name = microdurability
 
 # Mod Dependencies
-minecraft_version = 1.20.1
-fabric_loader_version = 0.14.22
-fabric_api_version = 0.87.0+1.20.1
-yarn_mappings = 1.20.1+build.10
-modmenu_version = 7.2.1
-cloth_config_version = 11.1.106
+minecraft_version = 1.20.6
+fabric_loader_version = 0.15.11
+fabric_api_version = 0.99.4+1.20.6
+yarn_mappings= 1.20.6+build.3
+modmenu_version = 10.0.0-beta.1
+cloth_config_version = 14.0.126
 
 # Dev-Env Mods
-use_third_party_mods = true
+use_third_party_mods = false
 sodium_version = mc1.20.1-0.5.2
 lithium_version = mc1.20.1-0.11.2
 ferritecore_version = 6.0.0-fabric
