--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include 'microdurability-core'
 include 'microdurability-1.17'
 include 'microdurability-1.19'
 include 'microdurability-1.19.4'
+include 'microdurability-1.20'
