--- a/gradle.properties
+++ b/gradle.properties
@@ -29,6 +29,10 @@ cloth_config_version_1_19 = 8.3.115
 minecraft_version_1_19_4 = 1.19.4
 yarn_mappings_1_19_4 = 1.19.4+build.2
 cloth_config_version_1_19_4 = 10.1.117
+# 1.20
+minecraft_version_1_20 = 1.20.1
+yarn_mappings_1_20 = 1.20.1+build.10
+cloth_config_version_1_20 = 11.1.118
 
 # Dev-Env Mods
 use_third_party_mods = true
@@ -43,7 +47,8 @@ starlight_version_1_17 = Starlight 1.0.0 1.17.x
 ferritecore_version_1_17 = 3.0.3
 smoothboot_version_1_17 = 1.16.5-1.6.0
 no_fade_version_1_17 = 3355800
-raised_version_1_17 = Fabric-1.17.1-1.1.2
+raised_version_1_17 = Fabric-1.17.1-3.1.3
+double_hotbar_version_1_17 = 1.1.0-mc1.17.1-fabric
 # 1.19
 fabric_api_version_1_19 = 0.76.1+1.19.2
 modmenu_version_1_19 = 4.2.0-beta.2
@@ -55,6 +60,8 @@ starlight_version_1_19 = 1.1.1+1.19
 ferritecore_version_1_19 = 5.0.3-fabric
 smoothboot_version_1_19 = 3821513
 no_fade_version_1_19 = 3550935
+raised_version_1_19 = Fabric-1.19.2-3.1.3
+double_hotbar_version_1_19 = 4034709
 # 1.19.4
 fabric_api_version_1_19_4 = 0.87.2+1.19.4
 modmenu_version_1_19_4 = 6.3.1
@@ -64,3 +71,15 @@ starlight_version_1_19_4 = 1.1.1+1.19
 ferritecore_version_1_19_4 = 5.2.0-fabric
 smoothboot_version_1_19_4 = 4441240
 no_fade_version_1_19_4 = 3550935
+raised_version_1_19_4 = Fabric-1.19.4-3.1.3
+double_hotbar_version_1_19_4 = 1.3.1-mc1.19.4-fabric
+# 1.20
+fabric_api_version_1_20 = 0.92.1+1.20.1
+modmenu_version_1_20 = 7.2.2
+sodium_version_1_20 = mc1.20.1-0.5.8
+lithium_version_1_20 = mc1.20.1-0.11.2
+ferritecore_version_1_20 = 6.0.1-fabric
+threadtweak_version_1_20 = 0.1.1+mc1.20.2
+fadeless_version_1_20 = 1.0.1
+raised_version_1_20 = Fabric-1.20.2-3.1.3
+double_hotbar_version_1_20 = 1.3.1-mc1.20.1-fabric
