--- a/microdurability-1.19.4/build.gradle
+++ b/microdurability-1.19.4/build.gradle
@@ -23,6 +23,10 @@ dependencies {
 		modRuntimeOnly "maven.modrinth:ferrite-core:${project.ferritecore_version_1_19_4}"
 		modRuntimeOnly "curse.maven:smooth-boot-415758:${project.smoothboot_version_1_19_4}"
 		modRuntimeOnly "curse.maven:no-fade-452768:${project.no_fade_version_1_19_4}"
+
+		// Comment out the following dependencies to check vanilla compatibility
+		modRuntimeOnly "maven.modrinth:raised:${project.raised_version_1_19_4}"
+		modRuntimeOnly "maven.modrinth:double-hotbar:${project.double_hotbar_version_1_19_4}"
 	}
 }
 
