Add 1.20.5 support; use better injection points

--- a/build.gradle
+++ b/build.gradle
@@ -142,14 +142,15 @@ dependencies {
 	include api(project(path: ':microdurability-1.19', configuration: 'namedElements'))
 	include api(project(path: ':microdurability-1.19.4', configuration: 'namedElements'))
 	include api(project(path: ':microdurability-1.20', configuration: 'namedElements'))
+	include api(project(path: ':microdurability-1.20.5', configuration: 'namedElements'))
 
-	modRuntimeOnly "com.terraformersmc:modmenu:${project.modmenu_version_1_20}"
-	modRuntimeOnly("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version_1_20}") {
+	modRuntimeOnly "com.terraformersmc:modmenu:${project.modmenu_version_1_20_5}"
+	modRuntimeOnly("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version_1_20_5}") {
 		exclude(group: 'net.fabricmc.fabric-api')
 	}
 
-	minecraft "com.mojang:minecraft:${minecraft_version_1_20}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings_1_20}:v2"
+	minecraft "com.mojang:minecraft:${minecraft_version_1_20_5}"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings_1_20_5}:v2"
 }
 
 
