--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ include 'microdurability-1.17'
 include 'microdurability-1.19'
 include 'microdurability-1.19.4'
 include 'microdurability-1.20'
+include 'microdurability-1.20.5'
