--- a/gradle.properties
+++ b/gradle.properties
@@ -33,6 +33,10 @@ cloth_config_version_1_19_4 = 10.1.117
 minecraft_version_1_20 = 1.20.1
 yarn_mappings_1_20 = 1.20.1+build.10
 cloth_config_version_1_20 = 11.1.118
+# 1.20.5
+minecraft_version_1_20_5 = 1.20.6
+yarn_mappings_1_20_5 = 1.20.6+build.3
+cloth_config_version_1_20_5 = 14.0.126
 
 # Dev-Env Mods
 use_third_party_mods = true
@@ -83,3 +87,13 @@ threadtweak_version_1_20 = 0.1.1+mc1.20.2
 fadeless_version_1_20 = 1.0.1
 raised_version_1_20 = Fabric-1.20.2-3.1.3
 double_hotbar_version_1_20 = 1.3.1-mc1.20.1-fabric
+# 1.20.5
+fabric_api_version_1_20_5 = 0.100.0+1.20.6
+modmenu_version_1_20_5 = 10.0.0-beta.1
+sodium_version_1_20_5 = mc1.20.6-0.5.8
+lithium_version_1_20_5 = mc1.20.6-0.12.3
+ferritecore_version_1_20_5 = 6.1.1-fabric
+threadtweak_version_1_20_5 = 0.1.3+mc1.20.6
+fadeless_version_1_20_5 = 1.0.1
+raised_version_1_20_5 = Fabric-24w10a-3.1.3
+# double_hotbar_version_1_20_5 =
