--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ archives_base_name = microdurability
 
 # Global Dependencies
 fabric_loader_version = 0.15.11
+fabric_asm_version = v2.3
 
 # Module Dependencies
 # 1.17
