--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include 'microdurability-1.19'
 include 'microdurability-1.19.4'
 include 'microdurability-1.20'
 include 'microdurability-1.20.5'
+include 'microdurability-dev-env-extras'
