--- a/microdurability-1.19/build.gradle
+++ b/microdurability-1.19/build.gradle
@@ -9,7 +9,8 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings_1_19}:v2"
 
 	// Other mods
-	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version_1_19}") {
+	modRuntimeOnly "com.terraformersmc:modmenu:${project.modmenu_version_1_19}"
+	modRuntimeOnly("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version_1_19}") {
 		exclude(group: 'net.fabricmc.fabric-api')
 	}
 
@@ -18,7 +19,6 @@ dependencies {
 		// Use full Fabric API bundle while debugging, since transitive deps aren't always declared correctly
 		modRuntimeOnly "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version_1_19}"
 
-		modRuntimeOnly "com.terraformersmc:modmenu:${project.modmenu_version_1_19}"
 		modRuntimeOnly "maven.modrinth:lazydfu:${project.lazydfu_version_1_19}"
 		modRuntimeOnly "maven.modrinth:sodium:${project.sodium_version_1_19}"
 		runtimeOnly "org.joml:joml:${project.sodium_joml_version_1_19}"
