--- a/microdurability-1.20.5/build.gradle
+++ b/microdurability-1.20.5/build.gradle
@@ -9,8 +9,8 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings_1_20_5}:v2"
 
 	// Other mods
-	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version_1_20_5}"
-	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version_1_20_5}") {
+	modRuntimeOnly "com.terraformersmc:modmenu:${project.modmenu_version_1_20_5}"
+	modRuntimeOnly("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version_1_20_5}") {
 		exclude(group: 'net.fabricmc.fabric-api')
 	}
 
