--- a/settings.gradle
+++ b/settings.gradle
@@ -21,4 +21,5 @@ include 'microdurability-1.19'
 include 'microdurability-1.19.4'
 include 'microdurability-1.20'
 include 'microdurability-1.20.5'
+include 'microdurability-1.21'
 include 'microdurability-dev-env-extras'
