--- a/gradle.properties
+++ b/gradle.properties
@@ -43,6 +43,11 @@ minecraft_version_1_20_5 = 1.20.6
 yarn_mappings_1_20_5 = 1.20.6+build.3
 cloth_config_version_1_20_5 = 14.0.126
 modmenu_version_1_20_5 = 10.0.0-beta.1
+# 1.21
+minecraft_version_1_21 = 1.21
+yarn_mappings_1_21 = 1.21+build.2
+cloth_config_version_1_21 = 15.0.127
+modmenu_version_1_21 = 11.0.0-rc.4
 
 # Dev-Env Mods
 use_third_party_mods = true
@@ -82,7 +87,7 @@ raised_version_1_19_4 = Fabric-1.19.4-3.1.3
 double_hotbar_version_1_19_4 = 1.3.1-mc1.19.4-fabric
 # 1.20
 fabric_api_version_1_20 = 0.92.1+1.20.1
-sodium_version_1_20 = mc1.20.1-0.5.8
+sodium_version_1_20 = mc1.20.1-0.5.10
 lithium_version_1_20 = mc1.20.1-0.11.2
 ferritecore_version_1_20 = 6.0.1-fabric
 threadtweak_version_1_20 = 0.1.1+mc1.20.2
@@ -90,11 +95,20 @@ fadeless_version_1_20 = 1.0.1
 raised_version_1_20 = Fabric-1.20.2-3.1.3
 double_hotbar_version_1_20 = 1.3.1-mc1.20.1-fabric
 # 1.20.5
-fabric_api_version_1_20_5 = 0.100.0+1.20.6
-sodium_version_1_20_5 = mc1.20.6-0.5.8
-lithium_version_1_20_5 = mc1.20.6-0.12.3
+fabric_api_version_1_20_5 = 0.100.2+1.20.6
+sodium_version_1_20_5 = mc1.20.6-0.5.9
+lithium_version_1_20_5 = mc1.20.6-0.12.4
 ferritecore_version_1_20_5 = 6.1.1-fabric
 threadtweak_version_1_20_5 = 0.1.3+mc1.20.6
 fadeless_version_1_20_5 = 1.0.1
 raised_version_1_20_5 = Fabric-24w10a-3.1.3
 # double_hotbar_version_1_20_5 =
+# 1.21
+fabric_api_version_1_21 = 0.100.2+1.21
+sodium_version_1_21 = mc1.21-0.5.9
+lithium_version_1_21 = mc1.21-0.12.5
+ferritecore_version_1_21 = 7.0.0-fabric
+# threadtweak_version_1_21 =
+fadeless_version_1_21 = 1.0.1
+#raised_version_1_21 =
+# double_hotbar_version_1_21 =
