--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,10 @@
 # Gradle Properties
 org.gradle.jvmargs = -Xmx2G
 org.gradle.parallel = true
-org.gradle.workers.max = 3
 
 # Gradle Plugins
 fabric_loom_version = 1.7-SNAPSHOT
-checkstyle_version = 10.17.+
+checkstyle_version = 10.18.+
 spotless_version = 6.25.+
 
 # Mod Properties
@@ -14,7 +13,7 @@ maven_group = com.github.reviversmc
 archives_base_name = microdurability
 
 # Global Dependencies
-fabric_loader_version = 0.15.11
+fabric_loader_version = 0.16.7
 fabric_asm_version = v2.3
 
 # Module Dependencies
@@ -31,28 +30,28 @@ modmenu_version_1_17 = 2.0.17
 # 1.19
 minecraft_version_1_19 = 1.19.2
 yarn_mappings_1_19 = 1.19.2+build.28
-cloth_config_version_1_19 = 8.3.115
+cloth_config_version_1_19 = 8.3.134
 modmenu_version_1_19 = 4.2.0-beta.2
 # 1.19.4
 minecraft_version_1_19_4 = 1.19.4
 yarn_mappings_1_19_4 = 1.19.4+build.2
-cloth_config_version_1_19_4 = 10.1.117
+cloth_config_version_1_19_4 = 10.1.135
 modmenu_version_1_19_4 = 6.3.1
 # 1.20
 minecraft_version_1_20 = 1.20.1
 yarn_mappings_1_20 = 1.20.1+build.10
-cloth_config_version_1_20 = 11.1.118
+cloth_config_version_1_20 = 11.1.136
 modmenu_version_1_20 = 7.2.2
 # 1.20.5
 minecraft_version_1_20_5 = 1.20.6
 yarn_mappings_1_20_5 = 1.20.6+build.3
-cloth_config_version_1_20_5 = 14.0.126
+cloth_config_version_1_20_5 = 14.0.139
 modmenu_version_1_20_5 = 10.0.0
 # 1.21
-minecraft_version_1_21 = 1.21
-yarn_mappings_1_21 = 1.21+build.2
-cloth_config_version_1_21 = 15.0.127
-modmenu_version_1_21 = 11.0.1
+minecraft_version_1_21 = 1.21.1
+yarn_mappings_1_21 = 1.21.1+build.3
+cloth_config_version_1_21 = 15.0.140
+modmenu_version_1_21 = 11.0.3
 
 # Dev-Env Mods
 use_third_party_mods = true
@@ -89,7 +88,7 @@ ferritecore_version_1_19 = 5.0.3-fabric
 smoothboot_version_1_19 = 3821513
 no_fade_version_1_19 = 3550935
 raised_version_1_19 = Fabric-1.19.2-3.1.3
-double_hotbar_version_1_19 = 4034709
+double_hotbar_version_1_19 = 1.2.3
 # 1.19.4
 fabric_api_version_1_19_4 = 0.87.2+1.19.4
 sodium_version_1_19_4 = mc1.19.4-0.4.10
@@ -101,7 +100,7 @@ no_fade_version_1_19_4 = 3550935
 raised_version_1_19_4 = Fabric-1.19.4-3.1.3
 double_hotbar_version_1_19_4 = 1.3.1-mc1.19.4-fabric
 # 1.20
-fabric_api_version_1_20 = 0.92.1+1.20.1
+fabric_api_version_1_20 = 0.92.2+1.20.1
 sodium_version_1_20 = mc1.20.1-0.5.10
 lithium_version_1_20 = mc1.20.1-0.11.2
 ferritecore_version_1_20 = 6.0.1-fabric
@@ -110,20 +109,20 @@ fadeless_version_1_20 = 1.0.1
 raised_version_1_20 = Fabric-1.20.2-3.1.3
 double_hotbar_version_1_20 = 1.3.1-mc1.20.1-fabric
 # 1.20.5
-fabric_api_version_1_20_5 = 0.100.2+1.20.6
+fabric_api_version_1_20_5 = 0.100.8+1.20.6
 sodium_version_1_20_5 = mc1.20.6-0.5.9
 lithium_version_1_20_5 = mc1.20.6-0.12.5
 ferritecore_version_1_20_5 = 6.1.1-fabric
 threadtweak_version_1_20_5 = 0.1.3+mc1.20.6
 fadeless_version_1_20_5 = 1.0.1
 raised_version_1_20_5 = Fabric-24w10a-3.1.3
-# double_hotbar_version_1_20_5 =
+double_hotbar_version_1_20_5 = 1.3.3-mc1.20.6-fabric
 # 1.21
-fabric_api_version_1_21 = 0.100.2+1.21
-sodium_version_1_21 = mc1.21-0.5.9
-lithium_version_1_21 = mc1.21-0.12.7
-ferritecore_version_1_21 = 7.0.0-fabric
-# threadtweak_version_1_21 =
-fadeless_version_1_21 = 1.0.1
-# raised_version_1_21 =
-# double_hotbar_version_1_21 =
+fabric_api_version_1_21 = 0.106.0+1.21.1
+sodium_version_1_21 = mc1.21-0.6.0-beta.2-fabric
+lithium_version_1_21 = mc1.21.1-0.13.1
+ferritecore_version_1_21 = 7.0.1-fabric
+threadtweak_version_1_21 = 0.1.5
+fadeless_version_1_21 = 1.1.1
+raised_version_1_21 = Fabric-1.21-4.0.0
+double_hotbar_version_1_21 = 1.3.3-mc1.21-fabric
