--- a/gradle.properties
+++ b/gradle.properties
@@ -55,6 +55,11 @@ modmenu_version_1_21 = 11.0.3
 
 # Dev-Env Mods
 use_third_party_mods = true
+# Shared
+raised_v1_version = 1.2.3
+raised_v2_version = 2.0.0
+raised_v3_version = 3.1.3
+raised_v4_version = 4.0.0
 # 1.16
 fabric_api_version_1_16 = 0.42.0+1.16
 lazydfu_version_1_16 = 0.1.2
@@ -64,7 +69,6 @@ phosphor_version_1_16 = mc1.16.2-0.8.0
 ferritecore_version_1_16 = 2.1.1-fabric
 smoothboot_version_1_16 = 1.16.5-1.6.0
 no_fade_version_1_16 = 3228523
-raised_version_1_16 = Fabric-1.16.5-3.1.3
 # 1.17
 fabric_api_version_1_17 = 0.46.1+1.17
 lazydfu_version_1_17 = 0.1.2
@@ -75,7 +79,6 @@ starlight_version_1_17 = Starlight 1.0.0 1.17.x
 ferritecore_version_1_17 = 3.0.3
 smoothboot_version_1_17 = 1.16.5-1.6.0
 no_fade_version_1_17 = 3355800
-raised_version_1_17 = Fabric-1.17.1-3.1.3
 double_hotbar_version_1_17 = 1.1.0-mc1.17.1-fabric
 # 1.19
 fabric_api_version_1_19 = 0.76.1+1.19.2
@@ -87,7 +90,6 @@ starlight_version_1_19 = 1.1.1+1.19
 ferritecore_version_1_19 = 5.0.3-fabric
 smoothboot_version_1_19 = 3821513
 no_fade_version_1_19 = 3550935
-raised_version_1_19 = Fabric-1.19.2-3.1.3
 double_hotbar_version_1_19 = 1.2.3
 # 1.19.4
 fabric_api_version_1_19_4 = 0.87.2+1.19.4
@@ -97,7 +99,6 @@ starlight_version_1_19_4 = 1.1.1+1.19
 ferritecore_version_1_19_4 = 5.2.0-fabric
 smoothboot_version_1_19_4 = 4441240
 no_fade_version_1_19_4 = 3550935
-raised_version_1_19_4 = Fabric-1.19.4-3.1.3
 double_hotbar_version_1_19_4 = 1.3.1-mc1.19.4-fabric
 # 1.20
 fabric_api_version_1_20 = 0.92.2+1.20.1
@@ -106,7 +107,6 @@ lithium_version_1_20 = mc1.20.1-0.11.2
 ferritecore_version_1_20 = 6.0.1-fabric
 threadtweak_version_1_20 = 0.1.1+mc1.20.2
 fadeless_version_1_20 = 1.0.1
-raised_version_1_20 = Fabric-1.20.2-3.1.3
 double_hotbar_version_1_20 = 1.3.1-mc1.20.1-fabric
 # 1.20.5
 fabric_api_version_1_20_5 = 0.100.8+1.20.6
@@ -115,7 +115,6 @@ lithium_version_1_20_5 = mc1.20.6-0.12.5
 ferritecore_version_1_20_5 = 6.1.1-fabric
 threadtweak_version_1_20_5 = 0.1.3+mc1.20.6
 fadeless_version_1_20_5 = 1.0.1
-raised_version_1_20_5 = Fabric-24w10a-3.1.3
 double_hotbar_version_1_20_5 = 1.3.3-mc1.20.6-fabric
 # 1.21
 fabric_api_version_1_21 = 0.106.0+1.21.1
@@ -124,5 +123,4 @@ lithium_version_1_21 = mc1.21.1-0.13.1
 ferritecore_version_1_21 = 7.0.1-fabric
 threadtweak_version_1_21 = 0.1.5
 fadeless_version_1_21 = 1.1.1
-raised_version_1_21 = Fabric-1.21-4.0.0
 double_hotbar_version_1_21 = 1.3.3-mc1.21-fabric
