--- a/microdurability-1.17/build.gradle
+++ b/microdurability-1.17/build.gradle
@@ -32,7 +32,10 @@ dependencies {
 		modRuntimeOnly "curse.maven:no-fade-452768:${project.no_fade_version_1_17}"
 
 		// Comment out the following dependencies to check vanilla compatibility
-		modRuntimeOnly "maven.modrinth:raised:${project.raised_version_1_17}"
+		// modRuntimeOnly "maven.modrinth:raised:Fabric-1.17.1-${project.raised_v1_version}"
+		// modRuntimeOnly "maven.modrinth:raised:Fabric-1.17.1-${project.raised_v2_version}"
+		// modRuntimeOnly "maven.modrinth:raised:Fabric-1.17.1-${project.raised_v3_version}"
+		modRuntimeOnly "maven.modrinth:raised:Fabric-1.17.1-${project.raised_v4_version}"
 		modRuntimeOnly "maven.modrinth:double-hotbar:${project.double_hotbar_version_1_17}"
 	}
 }
