--- a/microdurability-1.19/build.gradle
+++ b/microdurability-1.19/build.gradle
@@ -29,7 +29,10 @@ dependencies {
 		modRuntimeOnly "curse.maven:no-fade-452768:${project.no_fade_version_1_19}"
 
 		// Comment out the following dependencies to check vanilla compatibility
-		modRuntimeOnly "maven.modrinth:raised:${project.raised_version_1_19}"
+		// modRuntimeOnly "maven.modrinth:raised:Fabric-1.19.2-${project.raised_v1_version}"
+		// modRuntimeOnly "maven.modrinth:raised:Fabric-1.19.2-${project.raised_v2_version}"
+		// modRuntimeOnly "maven.modrinth:raised:Fabric-1.19.2-${project.raised_v3_version}"
+		modRuntimeOnly "maven.modrinth:raised:Fabric-1.19.2-${project.raised_v4_version}"
 		modRuntimeOnly "maven.modrinth:double-hotbar:${project.double_hotbar_version_1_19}"
 	}
 }
