--- a/microdurability-1.20.5/build.gradle
+++ b/microdurability-1.20.5/build.gradle
@@ -26,7 +26,8 @@ dependencies {
 		modRuntimeOnly "maven.modrinth:fadeless:${project.fadeless_version_1_20_5}"
 
 		// Comment out the following dependencies to check vanilla compatibility
-		modRuntimeOnly "maven.modrinth:raised:${project.raised_version_1_20_5}"
+		// modRuntimeOnly "maven.modrinth:raised:Fabric-24w10a-${project.raised_v3_version}"
+		modRuntimeOnly "maven.modrinth:raised:Fabric-1.20.6-${project.raised_v4_version}"
 		modRuntimeOnly "maven.modrinth:double-hotbar:${project.double_hotbar_version_1_20_5}"
 	}
 }
