--- a/microdurability-1.20/build.gradle
+++ b/microdurability-1.20/build.gradle
@@ -26,7 +26,10 @@ dependencies {
 		modRuntimeOnly "maven.modrinth:fadeless:${project.fadeless_version_1_20}"
 
 		// Comment out the following dependencies to check vanilla compatibility
-		modRuntimeOnly "maven.modrinth:raised:${project.raised_version_1_20}"
+		// modRuntimeOnly "maven.modrinth:raised:Fabric-1.20.1-${project.raised_v1_version}"
+		// modRuntimeOnly "maven.modrinth:raised:Fabric-1.20.1-${project.raised_v2_version}"
+		// modRuntimeOnly "maven.modrinth:raised:Fabric-1.20.1-${project.raised_v3_version}"
+		modRuntimeOnly "maven.modrinth:raised:Fabric-1.20.1-${project.raised_v4_version}"
 		modRuntimeOnly "maven.modrinth:double-hotbar:${project.double_hotbar_version_1_20}"
 	}
 }
